# phenix_amber

./: README.md  conda-forge.yml  configure
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml
.ci_support/: linux_64_numpy1.19python3.7.____cpython.yaml  linux_64_numpy1.19python3.8.____cpython.yaml  linux_64_numpy1.19python3.9.____cpython.yaml  linux_64_numpy1.21python3.10.____cpython.yaml  linux_64_numpy1.22python3.10.____cpython.yaml  linux_64_numpy1.22python3.9.____cpython.yaml  linux_64_numpy1.23python3.11.____cpython.yaml  linux_64_numpy1.26python3.12.____cpython.yaml  linux_64_python3.10.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.12.____cpython.yaml  linux_64_python3.7.____cpython.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____cpython.yaml  osx_64_numpy1.19python3.7.____cpython.yaml  osx_64_numpy1.19python3.8.____cpython.yaml  osx_64_numpy1.19python3.9.____cpython.yaml  osx_64_numpy1.21python3.10.____cpython.yaml  osx_64_numpy1.22python3.10.____cpython.yaml  osx_64_numpy1.22python3.9.____cpython.yaml  osx_64_numpy1.23python3.11.____cpython.yaml  osx_64_numpy1.26python3.12.____cpython.yaml  osx_64_python3.10.____cpython.yaml  osx_64_python3.11.____cpython.yaml  osx_64_python3.12.____cpython.yaml  osx_64_python3.7.____cpython.yaml  osx_64_python3.8.____cpython.yaml  osx_64_python3.9.____cpython.yaml  osx_arm64_numpy1.19python3.8.____cpython.yaml  osx_arm64_numpy1.19python3.9.____cpython.yaml  osx_arm64_numpy1.21python3.10.____cpython.yaml  osx_arm64_numpy1.22python3.10.____cpython.yaml  osx_arm64_numpy1.22python3.9.____cpython.yaml  osx_arm64_numpy1.23python3.11.____cpython.yaml  osx_arm64_numpy1.26python3.12.____cpython.yaml  osx_arm64_python3.10.____cpython.yaml  osx_arm64_python3.11.____cpython.yaml  osx_arm64_python3.12.____cpython.yaml  osx_arm64_python3.8.____cpython.yaml  osx_arm64_python3.9.____cpython.yaml  (+3 more)
.github/: CODEOWNERS
.scripts/: build_steps.sh
dat/antechamber/: ATOMTYPE_ABCG2.DEF  ATOMTYPE_CHECK.TAB  CONNECT.TPL
dat/leap/cmd/: leaprc.DNA.OL24  leaprc.DNA.tumuc1
dat/leap/lib/: tumuc.lib
dat/leap/parm/: frcmod.tumuc
recipe/: build.sh  conda_build_config.yaml  meta.yaml  utilMakeHelp
recipe.bkpoon/: build.sh  meta.yaml
recipe/original/: LICENSE  README.md  configure  msander.sh
recipe/original/src/: Makefile
recipe/original/src/addles/: MISC.h  Makefile  T3TOP.h  addspace.F  checksz.F  echo.F  find.F  getc.F  getd.F  intgr.F  les2prm.F  lesmain.F  lesprm.F  mexit.F90  nxt.F  pick.F  readprm.F  rline.F  unit.F  writprm.F
recipe/original/src/ambpdb/: Makefile  ambpdb_.F90  nxtsec.F90
recipe/original/src/antechamber/: Makefile  acdoctor.c  antechamber.c  fileformat.c
recipe/original/src/fftw-3.3/: CMakeLists.old  config.h.in.cmake
recipe/original/src/fftw-3.3/dft/: CMakeLists.txt
recipe/original/src/fftw-3.3/dft/scalar/: CMakeLists.txt
recipe/original/src/fftw-3.3/dft/scalar/codelets/: CMakeLists.txt
recipe/original/src/fftw-3.3/dft/simd/: CMakeLists.txt
recipe/original/src/fftw-3.3/libbench2/: CMakeLists.txt
recipe/original/src/fftw-3.3/mpi/: CMakeLists.txt
recipe/original/src/fftw-3.3/rdft/scalar/r2r/: CMakeLists.txt
recipe/original/src/fftw-3.3/simd-support/: CMakeLists.txt
recipe/original/src/fftw-3.3/tools/: CMakeLists.txt
recipe/original/src/leap/: Makefile  parser.y
recipe/original/src/msander/: AmberNetcdf.F90  amd.F90  (+128 more)
src/: Makefile.ap
src/addles/: CMakeLists.txt  SIZE.h  get4c.F  geti.F  wlesprm.F  writcrd.F
src/antechamber/: CMakeLists.txt  Makefile  README  acdoctor.c  am1bcc.c  antechamber.c  atomtype.c  bin_template  bondtype.c  bondtype.cpp  charge.c  charmmgen.c  checkmolecule.c  common.c  crdgrow.c  define.h  delphigen.c  eprintf.c  eprintf.h  equatom.c  equatom2.c  espgen.c  fileformat.c  gcrt.c  gzmat.c  jcrt.c  limits.h  match.c  match_atomname.c  mmcif.c  mol2.c  mopac.sh  mopcrt.c  mopout.c  orca.c  parmcal.c  parmchk2.c  patch.sh  pdbqt.c  poltop.c  (+7 more)
src/arpack/: Makefile
src/blas/: Makefile
src/fftw-3.3/rdft/: CMakeLists.txt
src/fftw-3.3/rdft/scalar/r2cb/: CMakeLists.txt
src/fftw-3.3/rdft/scalar/r2cf/: CMakeLists.txt
src/fftw-3.3/rdft/simd/: CMakeLists.txt
src/fftw-3.3/tests/: CMakeLists.txt
src/fftw-3.3/threads/: CMakeLists.txt
src/lapack/: Makefile
src/leap/: atom.c  basics.c  basics.h  commands.c  displayer.c  getline.c  graphUtil.c  minimizer.h  octree.c  pdb_sprntf.c  sort.c  sysdepend.c  tleap  tripos.c  utilMakeHelp.c
src/lib/: Makefile  nxtsec.F
src/msander/: .cvsignore  AmberNetcdf.F90  CMakeLists.txt  Makefile  Plumed_force.inc  _egb_simple.F90  cpparm.F90  crg_reloc.F90  def_time.h  degcnt.F90  depend  dynlib.F90  ene.F90  ew_box.F90  ew_fft.F90  ew_recip.F90  fftw3_dummy.c  file_io_dat.F90  force.F90  getcor.F90  ifdefs  interface.F90  interface_setup.F90  ips.F90  locmem.F90  makedepend  matinv.F90  md_scheme.F90  mdfil.F90  mdread.F90  mdwrit.F90  minrit.F90  multisander.F90  new_time.F90  nfe-colvar-math.F90  nfe-cv-ANGLE.F90  nfe-cv-COM_DISTANCE.F90  nfe-cv-COS_OF_DIHEDRAL.F90  nfe-cv-DISTANCE.F90  nfe-cv-LCOD.F90  (+30 more)
src/netcdf-c-4.7.2/include/: netcdf_meta.h
src/parmed/: Makefile  setup.py
src/pysander/: CMakeLists.txt  setup.py
src/pysander/sander/: __init__.py
src/pysander/sander/src/: pysandermodule.c
src/pysander/sanderles/src/: pysandermoduletypes.c
src/rism/: fftw3.F90  rism3d_debug_c.F90  rism3d_fft.F90  rism3d_kh_c.F90  rism3d_restart.F90  rism3d_solute_c.F90  rism_report_c.F90  safemem.F90
src/sqm/: Makefile  assert.F90  depend  qm2_dftb_gamma_dftb3.F90  qm2_dftb_get_dftb3_parameters.F90  qm2_dftb_get_qm_forces.F90  qm2_dftb_gettab.F90  qm2_dftb_module.F90  qm2_dftb_shift.F90  qm2_get_qmmm_forces.F90  qm2_pm6_hof_module.F90  qm2_read_nm_and_alloc.F90  qmmm_module.F90  qmmm_nml_module.F90  slater_overlap.F90  sqm.F90
src/xtalutil/: Makefile  PropPDB.c  add_chainId  adp2tls.py  conf_solvent.sh  fphi_to_hl  get_amber_energies.sh  md2map.sh  phenix.amber.sh  phenix.defaults  phenix.init.sh  phenix.initial.sh  run_metatwist_place  run_metatwist_rho  sf-dat_to_mtz
(+90 files in other folders)
